<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="24dp">

    <LinearLayout
        android:padding="20dp"
        android:gravity="center"
        android:background="@drawable/card_blur_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_karyawan"
            android:textColor="@color/gold"
            android:fontFamily="@font/ff"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="30dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/edittext_bg"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_actors"
            android:drawablePadding="@dimen/margin_small"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@drawable/edittext_bg"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="@dimen/margin_small"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:background="@drawable/edittext_bg"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="@dimen/margin_small"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:layout_marginVertical="10dp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:background="@drawable/edittext_bg"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/margin_small"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:layout_marginVertical="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/margin_small"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:layout_marginVertical="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/btn"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/btn"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>

</LinearLayout>
