<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"

    tools:context=".ui.OwnerHomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/ff"
        android:text="Halaman   Karyawan"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/margin_large"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_blur_background"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:paddingVertical="@dimen/margin_large">

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/card_blur_background"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/textViewUsername"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="10dp"
                android:src="@drawable/profile_1" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/username"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/nama"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewNama"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/alamat"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNoHp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewAlamat"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/no_hp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="Lihat Lokasi"
            android:layout_below="@id/rl_top"
            android:background="@drawable/btn"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="@dimen/margin_medium"
            app:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="Logout"
            android:layout_below="@id/buttonViewLocation"
            android:background="@drawable/btn"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="@dimen/margin_medium"
            app:tint="@color/colorAccent" />



    </RelativeLayout>

</LinearLayout>

