<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_large"
    android:paddingEnd="@dimen/margin_large"
    tools:context=".ui.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/ff"
        android:text="Welcome"
        android:textAllCaps="true"
        android:textColor="@color/gold"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/ff"
        android:text="To"
        android:textAllCaps="true"
        android:textColor="@color/gold"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="Cafe App"
        android:textColor="@color/gold"
        android:fontFamily="@font/ff"
        android:textAllCaps="true"
        android:layout_marginBottom="60dp"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

        <LinearLayout
            android:padding="20dp"
            android:gravity="center"
            android:background="@drawable/card_blur_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/gold"
                android:fontFamily="@font/ff"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_account"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/margin_small"
                android:minHeight="48dp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:layout_marginVertical="10dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_lock"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/margin_small"
                android:minHeight="48dp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:layout_marginVertical="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/btn"
                android:text="@string/login"
                android:layout_marginVertical="10dp"/>
        </LinearLayout>
</LinearLayout>
